# flapiaui

./: .dockerignore  .env-example  .gitignore  README.md  docker-compose-dev.yaml  docker-compose-prod.yaml  docker-compose.yaml
backend/: Dockerfile  Dockerfile-dev  pyproject.toml
backend/app/: dependencies.py  main.py
backend/app/configs/: sessions.py  settings.py
backend/app/models/: monthly_payment.py  payment_book.py  user.py
backend/app/routers/: monthly_payment.py  oauth2.py  payment_book.py  user.py
backend/app/schemas/: monthly_payment.py  oauth2.py  payment_book.py  user.py
backend/app/services/: base.py  monthly_payment.py  oauth2.py  payment_book.py  user.py
backend/backend/: main.py
backend/backend/api/app/routers/: default.py
backend/backend/api/core/: config.py
backend/migrations/: env.py
backend/migrations/versions/: 304fd4e0961b_create_inital_tables.py  7e06cef28262_create_inital_tables.py  976f73c82bf0_create_inital_tables.py  fdbb5cc80315_generate_token_table.py
backend/requirements/: requirements-base.txt  requirements-dev.txt
frontend/: Dockerfile-dev  Dockerfile-prod
frontend/App/: package.json
